syntax = "proto3";

package todo;

import "google/protobuf/empty.proto";

service todosService {
  // crud todo
  rpc findTodoById(FindById) returns (Todo);
  rpc findAllTodo(google.protobuf.Empty) returns (TodoAllDto);
  rpc createTodo(CreateTodoDto) returns (Todo);
  rpc updateTodo(UpdateTodoDto) returns (Todo);
  rpc deleteTodo(DeleteTodoDto) returns (Todo);
  rpc findPaginatedTodo(PaginatedRequestDto) returns (PaginatedTodoResponseDto);

  rpc findTodoListById(FindById) returns (TodoList);
  rpc findAllTodoList(google.protobuf.Empty) returns (TodoListAllDto);
  rpc createTodoList(CreateTodoList) returns (TodoList);
  rpc updateTodoList(UpdateTodoList) returns (TodoList);
  rpc deleteTodoList(DeleteTodoListDto) returns (TodoList);
  rpc findPaginatedTodoList(PaginatedRequestDto) returns (TodoList);
}

message PaginatedRequestDto {
  int32 limit = 1;
  int32 page = 2;
}

message PaginatedTodoResponseDto { repeated Todo items = 1; }

message FindById { string id = 1; }

message Todo {
  string id = 1;
  string title = 2;
  int32 priority = 3;
}

message CreateTodoDto {
  string title = 1;
  string priority = 2;
  string todoListId = 3;
}

message UpdateTodoDto {
  string id = 1;
  string title = 2;
  string priority = 3;
  string todoListId = 4;
}

message DeleteTodoDto { string id = 1; }

message TodoAllDto { repeated Todo items = 1; }

message TodoList {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Todo todos = 4;
}

message CreateTodoList {
  string name = 2;
  string description = 3;
}

message UpdateTodoList {
  string name = 2;
  string description = 3;
}

message DeleteTodoListDto { string id = 1; }

message TodoListAllDto { repeated TodoList items = 1; }